--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,10 @@
-1- Install .NET core SDK: https://dotnet.microsoft.com/download
-2- 
-
+1- Install .NET core SDK: https://dotnet.microsoft.com/download 
+# header H1
+## header H2
+### header H3
+#### header H4
+##### header H5
+###### header H6
 # CatchPokemon
 
 CatchPokemon is an app that allows you to catch pokemons
