--- a/ReadMe
+++ b/ReadMe
@@ -1,28 +1,22 @@
-1- Install .NET core SDK: https://dotnet.microsoft.com/download 
-# header H1
-## header H2
-### header H3
-#### header H4
-##### header H5
-###### header H6
-# CatchPokemon
+## Table of contents
+* [General info](#general-info)
+* [Technologies](#technologies)
+* [Setup](#setup)
 
-CatchPokemon is an app that allows you to catch pokemons
+## General info
+This project is simple Lorem ipsum dolor generator.
+	
+## Technologies
+Project is created with:
+* Lorem version: 12.3
+* Ipsum version: 2.33
+* Ament library version: 999
+	
+## Setup
+To run this project, install it locally using npm:
 
-## Installation
-
-Install [.NET core SDK](https://dotnet.microsoft.com/download).
-
-## Usage
-
-```bash
-cd src/Catch_Pokemons
-dotnet run
 ```
-OR
-```bash
-dotnet run --project src/Catch_Pokemons
+$ cd ../lorem
+$ npm install
+$ npm start
 ```
-
-## Testing
-I'm using the unit test framework
